<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FFXIV Item Database</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="searchItem"></string>
    <string name="searchButtonText">Search</string>
    <string name="clearQuery">Clear All</string>
    <string name="title_activity_data">DataActivity</string>
    <string name="itemList">item List</string>
    <string name="materialLists"></string>
    <string name="remove">Remove</string>
    <string name="ok">OK</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="missingTitle">Missing Text</string>
    <string name="missingMessage">Please enter an item to search for.</string>
    <string name="doesNotExist">Im sorry but the item does not exist.</string>
    <string name="unfindable">Item does not exist.</string>
    <string name="clear">Do you want to clear your list?</string>
    <string name="matName">Material Name</string>
    <string name="composeList">Compose Material List</string>
    <string name="saveList">Save List</string>
    <string name="title_activity_info">InfoActivity</string>
    <string name="back">Back</string>
    <string name="addToList">Add to List</string>
    <string name="title_activity_gatherer">GathererActivity</string>
    <string name="composeGatherer">Compose Gatherer List</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_data_get">DataGet</string>

</resources>
